objects/V21_SF_Account_Sync__e.object
<CustomObject>
    <description>Platform events to capture account creation/modification in Vision 21 and sync to R4B Org using API GW.</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLConsInd__c</fullName>
        <label>BLConsInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillStatus__c</fullName>
        <label>BillStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAptDesignator__c</fullName>
        <label>BillingAptDesignator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAptNumber__c</fullName>
        <label>BillingAptNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>BillingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLanguage__c</fullName>
        <label>BillingLanguage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMuncipality__c</fullName>
        <label>BillingMuncipality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingName__c</fullName>
        <label>LastBusinessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>BillingPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingProvince__c</fullName>
        <label>BillingProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreetName__c</fullName>
        <label>BillingStreetName</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillingStreetNumber__c</fullName>
        <label>BillingStreetNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreetType__c</fullName>
        <label>BillingStreetType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>CompanyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBAN__c</fullName>
        <label>ParentBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentID__c</fullName>
        <label>SegmentID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>V21 SF Account Sync</label>
    <pluralLabel>V21 SF Account Sync</pluralLabel>
</CustomObject>